1) Сделал новый метод для поиска викторины по названию в сервере Quiz 2) Начал работу над прохождением викторины в клиенте 3) Изменил таблицу quizzes бд Quiz (поле id_user на login); в связи с этим переписал логику соответсвующих методов и тестов
